# cpp-template-project

./: CMakeLists.txt
docs/source/: conf.py
homework_sep30/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  student_class.cpp  student_class.h
include/: student_class.h
src/: CMakeLists.txt  student_class.cpp
tests/: CMakeLists.txt  test_student.cpp
